style: update green div color

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       .red {
         background: red;
       }
+
+      .green {
+        background: green;
+        color: white;
+      }
     </style>
   </head>
   <body>
@@ -34,6 +39,7 @@
     reader."
 
     <div class="red">GitHub Frontend Mentor LinkedIn Twitter Instagram</div>
+    <div class="green">GitHub Frontend Mentor LinkedIn Twitter Instagram</div>
 
     <div class="attribution">
       Challenge by
